z-index issues on CSS style for a.mobile_connect, resolved

--- a/style.css
+++ b/style.css
@@ -731,7 +731,6 @@ div.card {
   img.mobile_hex_header {
     display: block;
     position: relative;
-
     top: -5em;
     left: 6em;
   }
@@ -741,7 +740,6 @@ div.card {
     bottom: 11em;
     left: 7.2em;
     width: 7em;
-
     padding: 0;
     font-family: 'Heebo', sans-serif;
     font-weight: 700;
@@ -886,6 +884,7 @@ div.card {
   }
 
   a.mobile_connect {
+    z-index: 999;
     position: relative;
     bottom: 6em;
     left: 7.2em;
@@ -1011,6 +1010,7 @@ div.card {
   }
 
   a.mobile_connect {
+    z-index: 999;
     position: relative;
     bottom: 6em;
     left: 7.2em;
